--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>doPi</name>
     <description>Raspberry Pi Web project</description>
+    <packaging>jar</packaging>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -37,7 +38,7 @@
         <dependency>
             <groupId>com.pi4j</groupId>
             <artifactId>pi4j-core</artifactId>
-            <version>1.1</version>
+            <version>1.2</version>
         </dependency>
 
         <dependency>
