--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,11 @@
             <version>3.4</version>
         </dependency>
 
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+        </dependency>
     </dependencies>
 
     <build>
