--- a/pom.xml
+++ b/pom.xml
@@ -6,8 +6,13 @@
     <artifactId>doPi</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>doPi</name>
-    <description>Raspberry Pi Web project</description>
     <packaging>jar</packaging>
+    <description>Raspberry Pi Web project</description>
+    <url>http://suroot.win/</url>
+
+    <prerequisites>
+        <maven>3.6</maven>
+    </prerequisites>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -88,7 +93,8 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.13.1</version>
+            <version>4.8.1</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -112,6 +118,14 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.9</version>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
             </plugin>
         </plugins>
     </build>
