--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -15,7 +15,7 @@ spring:
   datasource:
     master:
       driver-class-name: com.mysql.jdbc.Driver
-      jdbc-url: jdbc:mysql://localhost/test?characterEncoding=utf8&amp;useSSL=false
+      jdbc-url: jdbc:mysql://localhost/test?characterEncoding=utf8
       username: root
       password: 123456
       filters: stat
@@ -34,7 +34,7 @@ spring:
       timeBetweenEvictionRunsMillis: 60000
     slave:
       driver-class-name: com.mysql.jdbc.Driver
-      jdbc-url: jdbc:mysql://localhost/test?characterEncoding=utf8&amp;useSSL=false
+      jdbc-url: jdbc:mysql://localhost/test?characterEncoding=utf8
       username: root
       password: 123456
       filters: stat
