--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+## maven
+mvnw*
+.mvn
 HELP.md
 target/
 !.mvn/wrapper/maven-wrapper.jar
@@ -30,9 +33,8 @@ build/
 ### VS Code ###
 .vscode/
 
-## maven
-mvnw*
-.mvn
-
 logs/
 src/main/java/win/suroot/dopi/.DS_Store
+
+### jenv ###
+.java-version
