--- a/pom.xml
+++ b/pom.xml
@@ -135,6 +135,9 @@
         <resources>
             <resource>
                 <directory>src/main/resources</directory>
+                <includes>
+                    <include>**/*.*</include>
+                </includes>
             </resource>
             <resource>
                 <directory>src/main/java</directory>
