--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -14,42 +14,14 @@ spring.datasource.master.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.master.jdbc-url=jdbc:mysql://localhost/test?characterEncoding=utf8
 spring.datasource.master.username=root
 spring.datasource.master.password=123456
-spring.datasource.master.filters=stat
-spring.datasource.master.validationQuery=select 'x'
-spring.datasource.master.init-s-q-l=SET NAMES utf8mb4
-spring.datasource.master.initialSize=10
-spring.datasource.master.maxActive=20
-spring.datasource.master.maxWait=60000
-spring.datasource.master.minIdle=5
-spring.datasource.master.testOnBorrow=true
-spring.datasource.master.testOnReturn=true
-spring.datasource.master.testWhileIdle=true
-spring.datasource.master.poolPreparedStatements=true
-spring.datasource.master.maxOpenPreparedStatements=20
-spring.datasource.master.minEvictableIdleTimeMillis=300000
-spring.datasource.master.timeBetweenEvictionRunsMillis=60000
+
 spring.datasource.slave.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.slave.jdbc-url=jdbc:mysql://localhost/test?characterEncoding=utf8
 spring.datasource.slave.username=root
 spring.datasource.slave.password=123456
-spring.datasource.slave.filters=stat
-spring.datasource.slave.validationQuery=select 'x'
-spring.datasource.slave.init-s-q-l=SET NAMES utf8mb4
-spring.datasource.slave.initialSize=10
-spring.datasource.slave.maxActive=20
-spring.datasource.slave.maxWait=60000
-spring.datasource.slave.minIdle=5
-spring.datasource.slave.testOnBorrow=true
-spring.datasource.slave.testOnReturn=true
-spring.datasource.slave.testWhileIdle=true
-spring.datasource.slave.poolPreparedStatements=true
-spring.datasource.slave.maxOpenPreparedStatements=20
-spring.datasource.slave.minEvictableIdleTimeMillis=300000
-spring.datasource.slave.timeBetweenEvictionRunsMillis=60000
 
 # mybatis config
-mybatis.type-aliases-package=win.suroot.dopi.mapper
-mybatis.mapper-locations=win.suroot.dopi.mapper
-
+#mybatis.type-aliases-package=win.suroot.dopi.mapper
+#mybatis.mapper-locations=win.suroot.dopi.mapper
 
 logging.config=classpath:logback.xml
